Updated README with more details, updated modal to FOR SURE make text visible. Adjusted variables to make sure timer stops upon game completion.

--- a/css/memory.css
+++ b/css/memory.css
@@ -140,5 +140,9 @@ h1 {
     font-family: 'Open Sans', sans-serif;
     font-weight: 300;
     text-align: center;
-    color: #fff;
+    color: #000;
+}
+
+.modal-content p {
+    color: #000;
 }
